# experimental

./: .gitignore  18April2024_2.txt  api.http  boto3_exp.ipynb  diff_23Jan2025_VESPCI-2121-export-mode-adaptation  request_exp1.ipynb  request_resource_ctrl_api.ipynb  response_lib_result.json  training_controller.py  zip_unzip.ipynb
23jan/: api.http  projects_controller.py  templates_repo.py
mcp-servers/vespc-prjapi-mcp/vespc_prjapi_agent/: ARCHITECTURE.md  README.md  api_wrapper.py  fetch_my_projects.py  prjapi_endpoints.py  pyproject.toml  server_async.py
mcp-servers/vespc-prjapi-mcp/vespc_prjapi_agent/.cursor/: mcp.json
mcp-servers/vespc-prjapi-mcp/vespc_prjapi_agent/prompts/: 03_project_creation.md  04_project_comparison.md  05_project_details.md  07_template_exploration.md  08_project_audit.md  README.md  _01_project_discovery.md  _06_batch_operations.md
project-api/2025/1project-model-ownership/project-api/: CHANGELOG.md  README.md  api.http  api_model_owner_uuid.http  docker-compose-dev.yaml  pyproject.toml
project-api/2025/1project-model-ownership/project-api/project_api/: __main__.py  encoder.py  util.py
project-api/2025/1project-model-ownership/project-api/project_api/controllers/: data_sufficiency_controller.py  deployment_controller.py  job_controller.py  model_controller.py  models_controller.py  project_controller.py  projects_controller.py
project-api/2025/1project-model-ownership/project-api/project_api/models/: dataset.py  deployment.py  deployment_cloud_params.py  device.py  job_artifact.py  model.py  new_model.py  output_type.py  project.py
(+3785 files in other folders)
